[package]
name = "rust-algorithms"
version = "0.1.0"
edition = "2021"
default-run = "rust-algorithms"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "example" 
path = "src/bin/example/example.rs"  

[[bin]]
name = "contains-duplicate" 
path = "src/bin/contains-duplicate/contains-duplicate.rs"  

[[bin]]
name = "is-anagram" 
path = "src/bin/is-anagram/is-anagram.rs"  

[[bin]]
name = "two-sum" 
path = "src/bin/two-sum/two-sum.rs"  
